🐛 evtl fix white flash for dark mode

--- a/docs/components/theme.css
+++ b/docs/components/theme.css
@@ -1,3 +1,11 @@
+/* prevent initial flash in dark mode */
+
+/* beasties:include start */
+html {
+  background-color: #171717;
+}
+/* beasties:include end */
+
 .highlighter > pre,
 .highlighter > pre > code {
   background-color: transparent !important;
